--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "project-2",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.18.4"
+  },
+
   "description": "",
   "main": "server.js",
   "dependencies": {
